Ajout de raylib au prj

--- a/prj/Makefile
+++ b/prj/Makefile
@@ -2,11 +2,11 @@ CARGS=-g -Wall -c
 CC=gcc
 
 libmain.so: main.o
-	$(CC) -shared -o libmain.so $^
+	$(CC) -shared -o libmain.so $^ -lraylib -lm
 	make clean_obj
 
 main.o: main.c
-	$(CC) $(CARGS) $^
+	$(CC) $(CARGS) $^ -lraylib -lm
 
 clean_obj:
 	rm -f *.o
